# KEPL-Inventory-Analysis

./: .gitignore  README.md  pyproject.toml  requirements-ml.txt  requirements.txt  run_gui.py
data/: GRN.csv  Purchase_Order_Vouchers.csv  Purchase_Vouchers.csv
gui/: __init__.py  app.py
gui/views/: __init__.py  file_selection_view.py  log_view.py  main_window.py  ml_training_view.py  output_config_view.py  results_view.py
gui/widgets/: __init__.py  abc_chart_widget.py  file_picker.py  folder_picker.py
src/: logger_config.py  pipeline.py
src/analysis/: __init__.py  abc_classifier.py  anomaly_detector.py  base_forecast_strategy.py  ensemble_forecast.py  holt_winters_forecast.py  simple_forecast.py  stock_adjusted_forecast.py  supplier_risk_segmenter.py  xgboost_forecast.py
src/exporter/: base_exporter.py  excel_exporter.py
src/exporters/: __init__.py  base_exporter.py  excel_exporter.py
src/loaders/: __init__.py  base_loader.py  closing_stock_loader.py  grn_loader.py  pov_loader.py  pv_loader.py  tally_loaders.py
src/processors/: __init__.py  anomaly_extractor.py  data_cleaner.py  demand_aggregator.py  item_linker.py  lead_time_calculator.py  lead_time_predictor.py  supplier_aggregator.py  time_series_trainer.py
src/processors/similarity/: __init__.py  base_similarity.py  semantic_similarity.py  tfidf_similarity.py
